# Orangutan

./: .gitignore  CHANGELOG.md  Makefile  README.md  orangutan.code-workspace
.githooks/: pre-commit
.github/workflows/: precompile.yml  release.yml  test.yml
assets/.gen-cache/: get-resource-404.plantuml.sha  get-resource-full.plantuml.sha  get-resource-private-happy-path.plantuml.sha
assets/icons/: LICENSE
design/: README.md  diagrams.xd  get-resource-404.plantuml  preflight.plantuml
design/v1/: README.md  get-resource-full.plantuml  get-resource-private-happy-path.plantuml
design/v1/assets/.gen-cache/: get-resource-404.plantuml.sha  get-resource-full.plantuml.sha  get-resource-private-happy-path.plantuml.sha  preflight.plantuml.sha
design/v2/: README.md
design/v3/: README.md
orangutan-preflight/: Cargo.toml  TODO.md
orangutan-preflight/src/: refresh-token.rs  server.rs  upload.rs
scripts/: release.sh  render-diagrams.sh
src/: Cargo.toml  rustfmt.toml
src/helpers/: Cargo.toml
src/helpers/src/: config.rs  generate.rs  lib.rs  website_id.rs
src/helpers/src/readers/: keys_reader.rs  mod.rs  object_reader.rs
src/orangutan/: Cargo.toml  rustfmt.toml
src/orangutan-init/: Cargo.toml
src/orangutan-preflight/: Cargo.toml
src/orangutan-preflight/src/: config.rs  generate.rs  helpers.rs  keys_reader.rs  main.rs  object_reader.rs  preflight.rs  refresh-token.rs  server.rs  upload.rs
src/orangutan-refresh-token/: Cargo.toml
src/orangutan-refresh-token/src/: lib.rs  main.rs
src/orangutan-server/: .gitignore  Cargo.toml
src/orangutan-server/src/: auth.rs  config.rs  main.rs  middlewares.rs  request_guards.rs  util.rs
src/orangutan-server/src/routes/: auth_routes.rs  debug_routes.rs  main_route.rs  mod.rs  update_content_routes.rs
src/orangutan-server/src/routes/templates/: admin.html.tera  base.html.tera  generate-token.html.tera
src/orangutan-server/src/util/: mod.rs  templating.rs  website_root.rs
src/orangutan/.github/workflows/: precompile.yml  test.yml
src/orangutan/src/: config.rs  generate.rs  helpers.rs  init.rs  keys_reader.rs  object_reader.rs  preflight.rs  refresh-token.rs  server.rs
