[package]
name = "orangutan-preflight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
biscuit-auth = "4.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
# For upload
hyper = { version = "0.14.27", features = ["server"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio = "1.32.0"

[[bin]]
name = "orangutan-init"
path = "src/init.rs"

[[bin]]
name = "orangutan-preflight"
path = "src/preflight.rs"

[[bin]]
name = "orangutan-upload"
path = "src/upload.rs"

[[bin]]
name = "orangutan-server"
path = "src/server.rs"
