[workspace]
members = [
    'helpers',
    'orangutan-init',
    'orangutan-preflight',
    'orangutan-refresh-token',
    'orangutan-server',
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22"
biscuit-auth = "4"
chrono = "0.4"
iso8601-duration = "0.2"
lazy_static = "1"
rocket = "0.5"
serde_json = "1"
thiserror = "1"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
