[workspace]
members = [
    'helpers',
    'orangutan-init',
    'orangutan-preflight',
    'orangutan-refresh-token',
    'orangutan-server',
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
biscuit-auth = "5.0.0"
chrono = "0.4.41"
hex = "0.4.3"
iso8601-duration = "0.2.0"
lazy_static = "1.5.0"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
serde_with = "3.14.0"
tera = "1.20.0"
thiserror = "2.0.16"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
