[package]
name = "orangutan-preflight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
urlencoding = "2.1.3"
biscuit-auth = "4.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.105"
time = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.10"
iso8601-duration = "0.2.0"
# For upload
hyper = { version = "0.14.27", features = ["server"] }
tokio = "1.32.0"
rocket = "0.4.10"
futures = "0.3"

[[bin]]
name = "orangutan-init"
path = "src/init.rs"

[[bin]]
name = "orangutan-preflight"
path = "src/preflight.rs"

[[bin]]
name = "orangutan-server"
path = "src/server.rs"

[[bin]]
name = "orangutan-refresh-token"
path = "src/refresh-token.rs"
