[package]
name = "orangutan-refresh-token"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biscuit-auth = "4"
iso8601-duration = "0.2"
lazy_static = "1"
thiserror = "1"
tracing = "0.1"
orangutan-helpers = { path = "../helpers" }
