[package]
name = "orangutan-refresh-token"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biscuit-auth = { workspace = true }
iso8601-duration = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
orangutan-helpers = { path = "../helpers" }
