[package]
name = "orangutan-server"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
biscuit-auth = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
orangutan-helpers = { path = "../helpers" }
rocket = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }
