[package]
name = "orangutan-server"
version = "0.4.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
biscuit-auth = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
orangutan-helpers = { path = "../helpers" }
orangutan-refresh-token = { path = "../orangutan-refresh-token" }
rocket = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

[features]
default = ["token-generator"]
templating = ["tera"]
token-generator = ["templating"]
