[package]
name = "orangutan-server"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
biscuit-auth = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
mime = { workspace = true }
orangutan-helpers = { path = "../helpers" }
orangutan-refresh-token = { path = "../orangutan-refresh-token" }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true, optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

[features]
default = ["token-generator"]
templating = ["tera"]
token-generator = ["templating"]
